# python-project-template

./: Makefile  README.md  cookiecutter.json  pyproject.toml
.github/workflows/: main.yml
{{cookiecutter.project_name}}/: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml
{{cookiecutter.project_name}}/.github/: dependabot.yml
{{cookiecutter.project_name}}/.github/workflows/: main.yml  pre-commit-autoupdate.yml  publish.yaml
