[tool.black]
line-length = 99
target-version = ["py37", "py38", "py39", "py310", "py311"]
exclude = '''
/(
    \.git|.venv
)/
'''

[tool.isort]
profile = "black"
float_to_top = true
skip_glob = ".venv"

[tool.poetry]
name = "<project-name>"
version = "0.1.0"
description = "<project-description>"
repository = "https://github.com/expobrain/<project-name>"
authors = ["Daniele Esposti <daniele.esposti@gmail.com>"]
license = "MIT"
readme = "README.md"
# For libs
# packages = [{ include = "<project-name>", from = "lib" }]
packages = [{ include = "<project-name>" }]

[tool.poetry.dependencies]
python = "^3.7,<3.12"

[tool.poetry.group.dev.dependencies]
autoflake = "^1.4"
black = "^22.1"
isort = "^5.10.1"
mypy = "^0.981"
pytest = "^7.0.1"
pytest-cov = "^4.0.0"
flake8 = "^5.0.2"
flake8-datetime-utcnow-plugin = "^0.1.2"
pyupgrade = "^2.31.1"
flake8-bugbear = "^22.6.22"
pytest-clarity = "^1.0.1"
bandit = "^1.7.4"
pytest-testmon = "^1.4.1"
pytest-timeout = "^2.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = ".venv/"
check_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_subclassing_any = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true

# [[tool.mypy.overrides]]
# module = "google.auth.credentials"
# ignore_missing_imports = true

[tool.pytest.ini_options]
timeout = 10
