[tool.black]
line-length = 99
target-version = ["py38", "py39", "py310", "py311"]
exclude = '''
/(
    \.git|.venv
)/
'''

[tool.isort]
profile = "black"
float_to_top = true
skip_glob = ".venv"

[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"
repository = "https://github.com/expobrain/{{ cookiecutter.project_name }}"
authors = ["Daniele Esposti <daniele.esposti@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "{{ cookiecutter.project_name }}"{% if cookiecutter.is_library == "yes" %}, from = "src"{% endif %} }]


[tool.poetry.dependencies]
python = "^{{ cookiecutter.python_version }},<3.12"

[tool.poetry.group.dev.dependencies]
mypy = "^1.2"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
pytest-clarity = "^1.0.1"
pytest-testmon = "^2.0.6"
pytest-timeout = "^2.1.0"
{% if cookiecutter.is_library == "yes" -%}
commitizen = "^3.2.2"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = ["pyproject.toml:^version"]
update_changelog_on_bump = true
style = [
    ["qmark", "fg:#ff9d00 bold"],
    ["question", "bold"],
    ["answer", "fg:#ff9d00 bold"],
    ["pointer", "fg:#ff9d00 bold"],
    ["highlighted", "fg:#ff9d00 bold"],
    ["selected", "fg:#cc5454"],
    ["separator", "fg:#cc5454"],
    ["instruction", ""],
    ["text", ""],
    ["disabled", "fg:#858585 italic"]
]
{% endif %}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = ".venv/"
check_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_subclassing_any = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true

# [[tool.mypy.overrides]]
# module = "google.auth.credentials"
# ignore_missing_imports = true

[tool.pytest.ini_options]
timeout = 10
